@@ -2,6 +2,7 @@ Version 2.00.26 -
 =====================================
   Make clvmd fork later so it can return more error codes.
   Make clvmd cope with large gaps in node numbers IDs.
+  Make clvmd initialisation cope better with debugging output
   
 
 Version 2.00.25 - 29th September 2004
